[tool.poetry]
name = "clustree"
version = "0.1.0"
description = ""
authors = ["Ben Barlow <ben-j-barlow.1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "clustree", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88