[tool.poetry]
name = "clustree"
version = "0.1.0"
description = ""
authors = ["Ben Barlow <ben-j-barlow.1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "clustree", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
networkx = "^3.0"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"
jupyter = "^1.0.0"
pytest-datafiles = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88

[tool.pytest.ini_options]
pythonpath = "src"