[tool.poetry]
name = "clustree"
version = "0.1.8"
description = "Visualize relationship between clusterings at different resolutions"
authors = ["Ben Barlow <ben-j-barlow.1@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ben-j-barlow/clustree"
repository = "https://github.com/ben-j-barlow/clustree"
keywords = ["clustering", "visualization", "visualisation", "clustering-trees", "cluster-trees"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
packages = [
    { include = "clustree", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5"
networkx = "^3"
matplotlib = "^3.6"
pairing-functions = "0.2.1"
igraph = "^0.10.4"

[tool.poetry.group.dev.dependencies]
black = "^22"
isort = "^5"
flake8 = "^6"
jupyter = "^1.0.0"
pytest-datafiles = "^2"
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = "stress"